--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -39,12 +39,11 @@ Extending on the results obtained for both determining the focal volume as well 
 	\centering
 	\includegraphics[width=\linewidth]{images/lv65_vanadium.pdf}
 
-	\caption[Focus finding using IDI]{Preliminary results of the $g^2(\vec{q})$ calculation of the fluorescence of a 4\,\micrometer vanadium foil, placed at 4 different positions along the X-ray beam at the CXI experimental hutch (LCLS, running in an experimental configuration for short pulse duration under 1\,fs \cite{subfs2017,argosecond}) using the "100 nm" KB focusing (optimal theoretical focus size 90\,nm x 150\,nm, theoretical beam divergence 2 mrad x 1 mrad) on one tile of a Jungfrau detector (75\,\micrometer pixelsize, placed 480\,mm downstream of the sample). The axis are in detector pixels. Shown are averages over ~2000 shots with minimal shot based filtering. The position captioned "0" was determined during the experiment as the focus based on these results, the other positions are 250\,\micrometer and 500\,\micrometer further downstream and 250\,\micrometer upstream (this position was previously determined as the focus by imprints).  Some astigmatism is visible.}
+	\caption[Focus finding using IDI]{Preliminary results of the $g^2(\vec{q})$ calculation of the fluorescence of a 4\,\textmu m vanadium foil, placed at 4 different positions along the X-ray beam at the CXI experimental hutch (LCLS, running in an experimental configuration for short pulse duration under 1\,fs \cite{subfs2017,argosecond}) using the \enquote{100 nm} KB focusing (optimal theoretical focus size 90\,nm x 150\,nm, theoretical beam divergence 2 mrad x 1 mrad) on one tile of a Jungfrau detector (75\,\textmu m pixelsize, placed 480\,mm downstream of the sample). The axis are in detector pixels. Shown are averages over ~2000 shots with minimal shot based filtering. The position captioned \enquote{0} was determined during the experiment as the focus based on these results, the other positions are 250\,\textmu m and 500\,\textmu m further downstream and 250\,\textmu m upstream (this position was previously determined as the focus by imprints).  Some astigmatism is visible.}
 	\label{fig:outlook_vanadium}
 \end{figure}
 
 \paragraph{Higher Order Correlations}
-Extending the Hanbury-Brown and Twiss experiment to higher order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample as an effective filter by fixing some terms in the correlation function at certain positions termed \textit{Magic Poisition} \cite{schneider2018,thiel2007}. A future application of this scheme in the analysis of the already recorded fluorescence patterns might lead to a significant increase in the SNR.
+Extending the Hanbury-Brown and Twiss experiment to higher order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample as an effective filter by fixing some terms in the correlation function at certain positions termed \textit{Magic Positions} \cite{schneider2018,thiel2007}. A future application of this scheme in the analysis of the already recorded fluorescence patterns might lead to a significant increase in the SNR.
 $$\\$$
-
 Overall, the methods presented in this work have the potential for pushing the experimental implementation of IDI forward. Before considering the method as non-suitable for high resolution imaging, the results of experiments implementing the improvements described above should be awaited.
