--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,6 +1,6 @@
 \section{Discussion}
 
-The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines, but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. At it's root, there might be various causes for this: 1) a longer pulse length as a result of the less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), 2) the only partially by the regression corrected undersampling and 3) the higher observation angle creating additional spatial modes. For an accurate measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction.
+The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the \enquote{optimal} value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines, but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. At it's root, there might be various causes for this: 1) a longer pulse length as a result of the less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), 2) the only partially by the regression corrected undersampling and 3) the higher observation angle creating additional spatial modes. For an accurate measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction.
 
 The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimated SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample. However, there will be some differences  of the reconstructed structure factor due to the iron specificity of IDI and the smaller focal volume capturing less aggregates. Mechanical limitations in the experimental setup made is necessary to perform the experiment with the excitation beam under a 45° angle. The path length differences due to this angle and the relatively high thickness of the samples created a large number spatiotemporal modes reducing the contrast. At the time of sample simulations, design, and preparation, this experimental limitation was not yet known and therefore not considered.
 Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even there would be clear practical downsides: The tight focus and short Rayleigh length would make it difficult to achieve spatial overlap of the beam and sample and controlling the number of particles in the focal volume would be challenging. Taken together, the results indicate that follow-up measurements should be designed to be in forwards direction under the small angle regime to reduce the detrimental effect of the sample thickness.
@@ -8,5 +8,5 @@ Optimization of the preparation method leading to either higher concentrations o
 The achieved alignment of the crystalline samples after determination of the mean orientation, and translational offset is still worse than the resolution of the reconstruction and the size of the expected Bragg peaks. This results  most likely in a reduction of the signal contrast through averaging of different pixel pairs not belonging to the same true $\vec{q}$. As the regression has only been performed on the average image, variations over the scanning of the sample are not corrected. Mounting of the sample on the window as well as the damage done during the measurement by the focused beam might have resulted in slight bending of the thin glass stabilizing the crystal sheet. The energy of the excitation X-ray being close to the gallium K$_\alpha$ energy to avoid excitation of the arsenic atoms makes it impossible to quantify or filter coherent scattering in the recorded data. Combined, it is concealable that these effects resulted in a reduction of the peak intensity below the noise level. Furthermore, it has proved to be challenging to validate that the orientation correction works as designed and the Bragg peaks would be reconstructed at the positions chosen as regions-of-interest. A non-comprehensive search using local maxima filter (as used to determine the Bragg peak positions in the simulated correlations for \fref{fig:accesiblebraggq}) did not lead to reasonable, i.e. symmetric and at the correct $\left|\vec{q}\right|$, candidates at other positions.
 
 Severe detector artifacts unnoticed during the experiment reduced the amount of usable data significantly -- showing the necessity of better continuous online monitoring of the recorded data. The photon-counting applied to the raw images improved the fidelity of the focal images. Depending on the PSF of the detectors and sufficiently low photon counts, more sophisticated droplet schemes based on error minimization while incorporating the scattering photon and allowing for subpixel resolution, or using a neural network trained on synthetic images could further reduce the influence of noise and undersampling and might increase the contrast in for the single crystal images \cite{baumann2018,collaboration2014,schayck2020,sun2020}.\\
-Even though the application of non-uniform FFT (NUFFT) based correlation estimators with sophisticated interpolation kernels, which have successfully been used in other fields, would require more memory, the reduction in under-sampling by making full use of the smaller $\vec{q}$ spacing at higher detector angles could make it a worthwhile extension of the used 3d reconstruction \cite{laguna1998,yang2008,chang2020}. Another possible avenue for improvement of the implementation might be to reconstruct only relevant parts of the reciprocal space, significantly reducing computational time and memory requirements. 
+Even though the application of non-uniform FFT (NUFFT) based correlation estimators with sophisticated interpolation kernels, which have successfully been used in other fields, would require more memory, the reduction in under-sampling by making full use of the smaller $\vec{q}$ spacing at higher detector angles could make it a worthwhile extension of the used 3D reconstruction \cite{laguna1998,yang2008,chang2020}. Another possible avenue for improvement of the implementation might be to reconstruct only relevant parts of the reciprocal space, significantly reducing computational time and memory requirements. 
 
