--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -17,9 +17,9 @@ To allow (statistically) multiple particles inside the focus to improve the numb
 Magnetite nanoparticles coated with oleic acid and dispersed in toluene were bought from NN-Labs (nominal diameters 5\,nm, 10\,nm and 20\,nm), inhibited methylmethacrylate (MMA) and etyhlhexylmethacrylate (EHMA)  (both Sigma Aldrich) were filtered using a prefilled column to remove the inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN, Sigma Aldrich) was used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW ~192k) and ferric chloride (97\%, Sigma Aldrich) was used as received. As solvents, methanol, toluene and chloroform were used.
 \paragraph{Nanoparticles in Polystyrene Matrix} 
 The nanoparticles were precipitated with methanol, centrifuged and redispersed in chloroform at a concentration of 25\,mg/ml (with the weight of nanoparticles including the weight of the oleic acid capping). Polystyrene was dissolved in chloroform at a concentration of 250\,mg/ml. 
-To each of 700\,\microliter solution of 5\,nm nanoparticles, 500\,\microliter solution of 10\,nm nanoparticles and 425\,\microliter solution of 20\,nm nanoparticles, respectively, 5\,ml of the polystyrene solution were added, approximatly accounting for the different iron concentration in the solutions.  After ensuring dispersion by strong sonication, fractions of 100\,\microliter the solution were carefully dropped onto slowly spinning (100\,rpm for 5\,min) glass cover slips (20\,mm x 20\,mm). After drying, the approximately 200\,\micrometer thick films were removed from the glass slides.
+To each of 700\,\textmu l solution of 5\,nm nanoparticles, 500\,\textmu l solution of 10\,nm nanoparticles and 425\,\textmu l solution of 20\,nm nanoparticles, respectively, 5\,ml of the polystyrene solution were added, approximatly accounting for the different iron concentration in the solutions.  After ensuring dispersion by strong sonication, fractions of 100\,\textmu l the solution were carefully dropped onto slowly spinning (100\,rpm for 5\,min) glass cover slips (20\,mm x 20\,mm). After drying, the approximately 200\,\textmu m thick films were removed from the glass slides.
 
-As a control sample with approximately equal iron concentration, 60\,mg FeCl3 and 25\,g polystyrene were dissolved in 10\,ml acetone, sonicated and  fractions of 100\,\microliter were dropped onto slowly spinning glass slides  and carefully removed after drying.
+As a control sample with approximately equal iron concentration, 60\,mg FeCl3 and 25\,g polystyrene were dissolved in 10\,ml acetone, sonicated and  fractions of 100\,\textmu l were dropped onto slowly spinning glass slides  and carefully removed after drying.
 %\begin{table}[tp]
 %	\centering
 %	\caption{Nanoparticles in polystyrene recipes}
@@ -38,8 +38,8 @@ As a control sample with approximately equal iron concentration, 60\,mg FeCl3 an
 
 \paragraph{Nanoparticles in Poly-(methyl methacrylate / etylhexyl methacrylate)  Matrix}
 As a second nanoparticle in polymer sample, an azobisisobutyronitrile initiated methyl methacrylate (MMA)/etylhexyl methacrylate (EHMA) polymerization with magnetite nanoparticles was performed. 
-The nanoparticle solutions as bought were concentrated to 25\,mg/ml in toluene by precipitation with methanol, centrifugation and redispersion.  To varying amounts of the nanoparticle solution and additional toluene, 800\,\microliter of EHMA was added each to account for the different iron concentrations (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution  bubbled with N$_2$ for 5\,min. To start the polymerization, 20\,mg of AIBN was added and the solution was bubbled again with N$_2$  for 10\,min before heating to 60°C under weak sonication using a sonic bath. The mixture was kept at temperature for 12h.
-The vials were uncapped and the polymer dried for 12h at 50°C. The polymer was removed from the vials and cut into slices of approximately (150$\pm$20)\,\micrometer thickness using a slow spinning diamond saw.
+The nanoparticle solutions as bought were concentrated to 25\,mg/ml in toluene by precipitation with methanol, centrifugation and redispersion.  To varying amounts of the nanoparticle solution and additional toluene, 800\,\textmu l of EHMA was added each to account for the different iron concentrations (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution  bubbled with N$_2$ for 5\,min. To start the polymerization, 20\,mg of AIBN was added and the solution was bubbled again with N$_2$  for 10\,min before heating to 60°C under weak sonication using a sonic bath. The mixture was kept at temperature for 12h.
+The vials were uncapped and the polymer dried for 12h at 50°C. The polymer was removed from the vials and cut into slices of approximately (150$\pm$20)\,\textmu m thickness using a slow spinning diamond saw.
 As a control sample, the polymerization was performed without any nanoparticles added.
 
 \begin{table}[tp]
@@ -54,13 +54,13 @@ As a control sample, the polymerization was performed without any nanoparticles 
 		10\,nm& 0.8\,ml& 0.2\,ml & 0.8\,ml&  3.2\,ml&   20\,mg    \\
 		10\,nm& 0.8\,ml& 0,2\,ml &            &  4\,ml   &   20\,mg    \\
 		20\,nm& 0.6\,ml& 0.4\,ml& 0.8\,ml&  3.2\,ml&   20\,mg    \\
-		Control&           & 1\,ml     &800\,\microliter&  3.2\,ml&   20\,mg    \\
+		Control&           & 1\,ml     &800\,\textmu l&  3.2\,ml&   20\,mg    \\
 		\hline
 	\end{tabular}
 \end{table}
 
 \paragraph{Nanoparticle Sample Characterisation}
-To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received were diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal "20\,nm" diameter) 4.1$\pm$0.8 \,nm	("10\,nm" diameter) 3.1$\pm$0.6\,nm ("5\,nm"). In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
+To characterize the nanoparticles before the embedding in a polymer, the iron oxide nanoparticles as received were diluted with toluene, deposited on a silicon nitride membrane and imaged using a FEI Tecnai microscope  (see \fref{fig:tem}).  For each of the three nominal sizes, 3 different areas on the membrane were analyzed using ImageJ, resulting in mean radii of 8.3$\pm$1.7\,nm (nominal \enquote{20\,nm} diameter), 4.1$\pm$0.8 \,nm	(\enquote{10\,nm} diameter) and 3.1$\pm$0.6\,nm (\enquote{5\,nm}), respectively. In the TEM images, the effect of the oleic acid ligands used to stabilize the nanoparticle dispersion can be seen as the inter-particle distance.
 
 \begin{figure}[tp]
 	\centering
@@ -123,7 +123,7 @@ The measurements do not show a clear and significant difference between the two 
 \end{figure}
 \subsection{Galliumarsenide Crystal Films}
 The samples were prepared by Ben Reeves at the Stanford Nanofabrication Facility.
-Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,\micrometer GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The specimen was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,\micrometer thick fused silica cover slip with the 5\,\micrometer film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,\micrometer thin GaAs films glued onto the the silica slides (see \fref{fig:gaas_sample}). 
+Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,\textmu m GaAs film were grown on an epi-ready (100)±0.1° GaAs substrate. The specimen was cut into 12\,mm\,x\,15\,mm pieces, each glued to an approx. 100\,\textmu m thick fused silica cover slip with the 5\,\textmu m film layer facing towards the silica. The substrate and the AlGaAs layer were selectively etched away via C6H8O7:H2O2 and HF:H2O wet etches, respectively. This left 5\,\textmu m thin GaAs films glued onto the the silica slides (see \fref{fig:gaas_sample}). 
 A X-ray diffraction $\omega$-scan with copper K$\alpha$ (PANAlytical X’Pert Pro) shows the FWHM width of the (004) GaAs Bragg peak after mounting on the silica slides as 0.004°, indicative of high quality single crystals. 
 
 
@@ -141,12 +141,12 @@ The setup used at the experimental station EH5 at SACLA is shown in \fref{fig:se
 
 The FEL provided approximately 10\,fs long hard X-ray pulse with $\approx 10^{11}$ photons at 11\,keV (just above the gallium K-edge and below the arsenic K-edge, see \fref{tab:elements}) and 30\,Hz repetition rate \cite{tono2013}. The beam was focused by the \textit{100\,exa} KB nano-focusing system. The focus spot along the beam direction was found by optimizing the strength of (non-linear) amplified spontanous emission (ASE) of a copper foil, resulting in focal FWHM of 200\,nm vertical/100\,nm horizontal (as determined by a wirescan) \cite{yumoto2020,handa2010,yoneda2015}.
 
-The sample was mounted in a 45° angle to the beam on a stack of two rotational/two translational/two rotational/three translational stages to allow scanning of the sample, to ensure perpendicularity of the scanning directions to the beam to stay within the Rayleigh length (approx. 100\,\micrometer horizontal/200\,\micrometer vertical) while also ensuring a parallel alignment of the sample surface to one of the detectors. 
+The sample was mounted in a 45° angle to the beam on a stack of two rotational/two translational/two rotational/three translational stages to allow scanning of the sample, to ensure perpendicularity of the scanning directions to the beam to stay within the Rayleigh length (approx. 100\,\textmu m horizontal/200\,\textmu m vertical) while also ensuring a parallel alignment of the sample surface to one of the detectors. 
 
-Overall, two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a "Short Working Distance" octal detector, consisting of eight 512x1024 pixel tiles, parallel to the sample surface in a distance $d_{octal}=$14-50\,cm. To suppress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the dual detector.
+Overall, two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a \textit{Short Working Distance} octal detector, consisting of eight 512x1024 pixel tiles, parallel to the sample surface in a distance $d_{octal}=$14-50\,cm. To suppress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the dual detector.
 An L-shaped aluminum plate was installed to reduce stray light as well as to allow mounting of the beamstop and filters between sample and detectors.
 
-The samples were scanned with a mean step size of 20\,\micrometer in horizontal direction (fast scanning direction) and 20\,\micrometer in vertical direction between shots. The step size was chosen based on the crater size visible with an optical microscope of approximately 5-10\,\micrometer for the samples and energies used in the experiment.
+The samples were scanned with a mean step size of 20\,\textmu m in horizontal direction (fast scanning direction) and 20\,\textmu m in vertical direction between shots. The step size was chosen based on the crater size visible with an optical microscope of approximately 5-10\,\textmu m for the samples and energies used in the experiment.
 
 \begin{figure}
 	\centering
@@ -155,20 +155,20 @@ The samples were scanned with a mean step size of 20\,\micrometer in horizontal 
 	\label{fig:setup}
 \end{figure}
 \paragraph{Imaging the Focus}
-To image the focus, one of the following foils with purity >99.99\% was mounted on the sample holder: 500\,nm iron (Goodfellow), 10\,\micrometer iron (Nilaco), 5\,\micrometer (Nilaco) and 20\,\micrometer (Goodfellow). The fluorescence was recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
-The X-ray beam was attenuated by 0.4\,mm silicon, resulting in 20-30\,\microjoule  energy at the sample for pulse energies at the upstream energy monitors of 400\,\microjoule \cite{yabashi2015,tono2013}.
+To image the focus, one of the following foils with purity >99.99\% was mounted on the sample holder: 500\,nm iron (Goodfellow), 10\,\textmu m iron (Nilaco), 5\,\textmu m (Nilaco) and 20\,\textmu m (Goodfellow). The fluorescence was recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
+The X-ray beam was attenuated by 0.4\,mm silicon, resulting in 20-30\,\textmu J  energy at the sample for pulse energies at the upstream energy monitors of 400\,\textmu J \cite{yabashi2015,tono2013}.
 \paragraph{Imaging Nanoparticles}
-For imaging the prepared iron nanoparticle and reference samples, the octal detector, which was the main imaging detector for these samples was moved to $d_\text{octal}\approx$43\,cm. The vacuum tube in front of the dual detector was partially removed to avoid mechanical interference. The sample was slightly moved out of focus along the beam direction by 400\,\micrometer instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10\,\micrometer iron foil measurement using the dual detector was taken to confirm the beam conditions.
+For imaging the prepared iron nanoparticle and reference samples, the octal detector, which was the main imaging detector for these samples was moved to $d_\text{octal}\approx$43\,cm. The vacuum tube in front of the dual detector was partially removed to avoid mechanical interference. The sample was slightly moved out of focus along the beam direction by 400\,\textmu m instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10\,\textmu m iron foil measurement using the dual detector was taken to confirm the beam conditions.
 
 \paragraph{Imaging Crystals}
-For imaging GaAs single crystal samples, the distance between the octal detector and the sample was shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). A 25\,\micrometer zinc filter was installed on the filter holder to reduce the amount of non-fluorescence photons (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector. The crystal surface was aligned to be parallel to the detector plane, and the scanning directions were aligned to be parallel to the crystal surface within less than 1°. The X-ray beam was attenuated by 0.4\,mm silicon.
+For imaging GaAs single crystal samples, the distance between the octal detector and the sample was shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). A 25\,\textmu m zinc filter was installed on the filter holder to reduce the amount of non-fluorescence photons (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector. The crystal surface was aligned to be parallel to the detector plane, and the scanning directions were aligned to be parallel to the crystal surface within less than 1°. The X-ray beam was attenuated by 0.4\,mm silicon.
 
 \section{Data Processing and Analysis}
 As the amount of recorded data is huge, an efficient strategy for filtering on shots, preprocessing the data to eliminate interference and finally reconstruction had to be implemented.
 \subsection{Preprocessing}
 
 \paragraph{Preliminary shot filtering}
-A first rough filtering pass on the recorded data was done on the following criteria: Reported beam energy > 250\,\microjoule, beam energy in the hutch being not more than one standard deviation below the mean energy and the distance on the sample to the closest neighboring shot not being less than one standard deviation of the mean distance to the next neighbor for the sample (to remove shots with stopped, turning or still accelerating scanning motors). Furthermore, the scanning range occupied by the sample was identified by the fluorescence intensity on the octal detector and shots, where the X-ray beam does not hit the sample were removed. The remaining images were used to create spectra and perform photon counting.
+A first rough filtering pass on the recorded data was done on the following criteria: Reported beam energy > 250\,\textmu J, beam energy in the hutch being not more than one standard deviation below the mean energy and the distance on the sample to the closest neighboring shot not being less than one standard deviation of the mean distance to the next neighbor for the sample (to remove shots with stopped, turning or still accelerating scanning motors). Furthermore, the scanning range occupied by the sample was identified by the fluorescence intensity on the octal detector and shots, where the X-ray beam does not hit the sample were removed. The remaining images were used to create spectra and perform photon counting.
 
 
 \paragraph{Filtering for Impurities}
@@ -216,7 +216,7 @@ During the experiment, an unnoticed failure of the electronics of the octal dete
 
 
 \paragraph{Spectra}
-The background subtracted and masked detector images were used to create spectra. The different samples were categorized into a smaller number of groups by the apparent similarity of the spectra/number of signal photons: The foil  data was grouped into three classes: one for copper foils, one for 10\,\micrometer thick iron foils and one for 500\,nm thick foils. The nanoparticle and single crystal data were assigned one class each.
+The background subtracted and masked detector images were used to create spectra. The different samples were categorized into a smaller number of groups by the apparent similarity of the spectra/number of signal photons: The foil  data was grouped into three classes: one for copper foils, one for 10\,\textmu m thick iron foils and one for 500\,nm thick foils. The nanoparticle and single crystal data were assigned one class each.
 On these spectra, a regression was performed.  The model consisted of peaks at multiples of the K$_\alpha$, K$_\beta$ and of the excitation energy with an initial FWHM of 500\,eV and intensities following a negative binomial distribution (signal) or Poisson distribution (scattering noise). To roughly approximate the charge sharing, a numerical convolution with a  window of the shape
 \begin{equation}
 	w (x)= (1-p)\delta(x)+\rect\left(\frac{x-1/2}{E_{signal}}\right)*\frac{p}{E_{signal}}
@@ -230,7 +230,7 @@ With the determined K$_\alpha$, K$_\beta$ and scattering intensities, 1000 image
 
 
 \paragraph{Final shot filtering}
-Before doing the reconstruction, a final filtering pass was performed on the images, keeping only those shots where the following criteria were fulfilled: 1)  the reported pulse energy was >450\,\microjoule, 2) the upstream measured mean photon energy within the pulse was within two standard deviations of the median over all pulses, 3) the ratio of the pulse energy in the experimental hutch to further upstream in the optical hutch was within one standard deviation of the mean, and 4) the ratio of the intensity on all 4 edges of the detectors as well as the total intensity on both detectors to the pulse energy to was not lower than two and not higher than four standard deviations of the mean.  For the last criterion, the total scanning area used was cut into equally sized squares with a side length of 1/100th the horizontal scanning range and the filtering was done for all shots within each of those squares. This increased the statistics over a shot-wise filtering and proved sufficient to remove remaining bad areas on the sample (such as cracks resulting from previous shots) as well as areas where shadowing of the detector due to the sample holder might have occurred.
+Before doing the reconstruction, a final filtering pass was performed on the images, keeping only those shots where the following criteria were fulfilled: 1)  the reported pulse energy was >450\,\textmu J, 2) the upstream measured mean photon energy within the pulse was within two standard deviations of the median over all pulses, 3) the ratio of the pulse energy in the experimental hutch to further upstream in the optical hutch was within one standard deviation of the mean, and 4) the ratio of the intensity on all 4 edges of the detectors as well as the total intensity on both detectors to the pulse energy to was not lower than two and not higher than four standard deviations of the mean.  For the last criterion, the total scanning area used was cut into equally sized squares with a side length of 1/100th the horizontal scanning range and the filtering was done for all shots within each of those squares. This increased the statistics over a shot-wise filtering and proved sufficient to remove remaining bad areas on the sample (such as cracks resulting from previous shots) as well as areas where shadowing of the detector due to the sample holder might have occurred.
 
 
 
@@ -282,7 +282,7 @@ For the crystal data, a full three dimensional correlation of the rotation and o
 Applying the aforementioned preprocessing and analysis steps to the recorded fluorescence images for all three classes of samples leads to results as follows. 
 \subsection{Imaging the Focus}
 
-The regression of the spectra (\fref{fig:spectrafoil}) resulted in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\micrometer copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression provided estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ was found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits were affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe led to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single-photon energy. This is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
+The regression of the spectra (\fref{fig:spectrafoil}) resulted in a mean K$_{\alpha}$ photon count per pixel of 0.004$\pm$0.001 (500\,nm iron foil) to 0.041$\pm$0.001 (20\,\textmu m copper foil). The mode number could not be reasonably estimated for the 500\,nm iron sample due to the influence of air scattering and fluorescence stemming from the experimental setup and low number of signal photons. For the other samples, the regression provided estimates in the range of 15-25 modes. The charge sharing approximation parameter $p$ was found to be 0.43$\pm$0.01, meaning about 40\% of the photon hits were affected. The simplifications of assuming a uniform charge cloud by using a convolution windows with a flat side lobe led to disagreement between the slightly curved histograms and the flat regressions in the valleys between integer multiples of the single-photon energy. This is no longer present in the spectra simulated with a Gaussian charge cloud (see \fref{fig:thresholdsfoil}) for an example.
 
 The reconstructions were performed once without discretization and only applying a threshold of 1500\,eV and once with discretization into photons using the thresholds found in the simulation of the spectra. Without discretization, strong artifacts were visible in the reconstruction, which were mostly reduced by the applied photon counting (see \fref{fig:foil_photonmodes} for a comparison).
 
@@ -303,23 +303,23 @@ The excited volume can be approximated in horizontal direction as a rectangular 
 In a small-angle approximation, the reconstruction is the magnitude squared of the 2D Fourier transform of the volume. As the magnitude squared of the Fourier transform of a Gaussian with FWHM $f$ is another Gaussian with FWHM $\frac{4\sqrt{2}\log{2}}{f}$ and of a rectangular function\footnote{If the foil were thicker, the absorption length $a$ could not be ignored and the more complicated $\left|\mathscr{F}\left(e^{-\frac{x}{a}} \Pi \left(\frac{x}{w}\right)\right)\right|^2 \propto \frac{\cosh \left(\frac{w}{a}\right)-\cos (q w)}{a^2 q^2+1}$
 	could be used instead.} with width $w$ is proportional to $\sinc^2{\left(\frac{q w}{2}\right)}$, a 2D least-squares regression of the product of those functions is performed on the reconstructed image to estimate the focal FWHM \cite{butz2015}. As the horizontal direction is under-sampled, the horizontal profile will not be resolved in the reconstruction.  The function used for the regression is sampled at 25x the resolution in both directions and averaged. This corresponds to a convolution with a rectangular sampling kernel and reduces the effect of undersampling on the values determined by the regression. Furthermore, a rotation parameter is introduced to account for a slight misalignment of the detector.
 
-For a 5\,\micrometer Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
-The regression estimates of the focal width in the vertical direction at a nominal focus as (240$\pm$20)\,nm and while defocused by 250\,\micrometer as (380$\pm$40)\, nm (the stated errors only include regression uncertainty). In \fref{fig:fereco2d} the results for 10\,\micrometer and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\micrometer and 10\,\micrometer foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500*$\sqrt{2}$\,nm.
+For a 5\,\textmu m Copper foil placed at three different positions, at the nominal focus and two positions further upstream, results of the auto-correlation reconstruction are shown in \fref{fig:Cu5umreco2d}.
+The regression estimates of the focal width in the vertical direction at a nominal focus as (240$\pm$20)\,nm and while defocused by 250\,\textmu m as (380$\pm$40)\, nm (the stated errors only include regression uncertainty). In \fref{fig:fereco2d} the results for 10\,\textmu m and 500\,nm iron foils as well as an example of the result of the regression is shown. As the 5\,\textmu m and 10\,\textmu m foils suffer from severe undersampling along the horizontal direction, only for the 500\,nm iron foil (\fref{fig:fe500nmreco2d}) the regression of the width in this axis can be performed. The regression estimates the width of the emitting volume in focal position as (500$\pm$250)\,nm in the horizontal direction, agreeing with the expected value of (500*$\sqrt{2}$\,nm.
 
 Nevertheless, for all three foils in focal position the signal amplitude can be extrapolated by the regression as 0.004$\pm$0.001 with no significant difference between the samples.
-The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\micrometer foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
+The noise levels as estimated by the standard deviation over pixels outside the feature containing region of interest are  0.00013 for the copper foil, 0.0002 for the iron 10\,\textmu m foil, and 0.002 for the iron 500\,nm foil. The mean over the regions of interest of standard errors of the mean over the different shots used in the reconstruction are equal to these as well.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.9\linewidth]{images/Cu5um_reco2d.pdf}
-	\caption[Results copper foil]{Results of the $g^2-1$ calculation for the 5\,\micrometer copper foil placed at the focus as well as at two positions outside the focus (along the X-ray beam). As the focal width increases due to the defocusing, its extent in the reconstructed reciprocal space decreases until at -500\,\micrometer defocus it can no longer be reconstructed. The narrow extent in horizontal direction in reciprocal spaces causes undersampling and contrast reduction. }
+	\caption[Results copper foil]{Results of the $g^2-1$ calculation for the 5\,\textmu m copper foil placed at the focus as well as at two positions outside the focus (along the X-ray beam). As the focal width increases due to the defocusing, its extent in the reconstructed reciprocal space decreases until at -500\,\textmu m defocus it can no longer be reconstructed. The narrow extent in horizontal direction in reciprocal spaces causes undersampling and contrast reduction. }
 	\label{fig:Cu5umreco2d}
 \end{figure}
 \begin{figure}
 	\centering
 	\begin{subfigure}[b]{0.9\textwidth}
 		\includegraphics[width=\linewidth]{images/Fe10um_reco2d.pdf}
-		\caption{10\,\micrometer iron foil}
+		\caption{10\,\textmu m iron foil}
 		\label{fig:fe10umreco2d}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.9\textwidth}
@@ -327,13 +327,13 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 		\caption{500\,nm iron foil}
 		\label{fig:fe500nmreco2d}
 	\end{subfigure}
-	\caption[Results iron foils]{\textbf{(a)} $g^2-1$ results for the 10\,\micrometer iron foil placed at the focus as well as outside the focus (along the X-ray beam) and the result obtained by regression on the nominal focus data with fixed true horizontal dimension. This is used to extrapolate the peak amplitude in the masked areas. \textbf{(b)} $g^2-1$ results for the 500\,nm Iron foil at focus as well as at two defocused positions. The SNR is low and the signal almost indistinguishable from noise, but the horizontal extent in reciprocal space is as expected larger. Due to the low SNR no reliable regression of the focal size can be performed.}
+	\caption[Results iron foils]{\textbf{(a)} $g^2-1$ results for the 10\,\textmu m iron foil placed at the focus as well as outside the focus (along the X-ray beam) and the result obtained by regression on the nominal focus data with fixed true horizontal dimension. This is used to extrapolate the peak amplitude in the masked areas. \textbf{(b)} $g^2-1$ results for the 500\,nm Iron foil at focus as well as at two defocused positions. The SNR is low and the signal almost indistinguishable from noise, but the horizontal extent in reciprocal space is as expected larger. Due to the low SNR no reliable regression of the focal size can be performed.}
 	\label{fig:fereco2d}
 \end{figure}
 \begin{figure}
 	\centering
 	\includegraphics[width=\linewidth]{images/energy_binned.pdf}
-	\caption[Excitation energy binned reconstruction]{$g^2-1$ results using a 5\,\micrometer copper foil placed at the focus as the sample. The reconstructions have been performed on 4000 images each (see histogram on the left)  selected by excitation pulse energy estimates by upstream energy detectors as surrogate for the pulse length, similar to the data selection in previous experiments at SACLA \cite{inoue2019}. Regression of the signal amplitude as (as described in the main text) shows a slight difference: 0.0038$\pm$0.0007 for the low energy shots, 0.0043$\pm$0.0007 for the medium energy shots and 0.0052$\pm$0.0007 for the high energy shots. This confirms the validity of dropping low energy shots from the reconstruction to improve the SNR.}
+	\caption[Excitation energy binned reconstruction]{$g^2-1$ results using a 5\,\textmu m copper foil placed at the focus as the sample. The reconstructions have been performed on 4000 images each (see histogram on the left)  selected by excitation pulse energy estimates by upstream energy detectors as surrogate for the pulse length, similar to the data selection in previous experiments at SACLA \cite{inoue2019}. Regression of the signal amplitude as (as described in the main text) shows a slight difference: 0.0038$\pm$0.0007 for the low energy shots, 0.0043$\pm$0.0007 for the medium energy shots and 0.0052$\pm$0.0007 for the high energy shots. This confirms the validity of dropping low energy shots from the reconstruction to improve the SNR.}
 	\label{fig:energy_binned}
 \end{figure}
 
@@ -360,7 +360,7 @@ The noise levels as estimated by the standard deviation over pixels outside the 
 	\label{fig:resnano}
 \end{figure}
 
-The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample, the number of images analyzed has been limited to 30,000 for each sample, with the exception of the "10\,nm in PS" sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
+The mean number of counted signal photons per pixel after filtering is $0.03\pm0.01$ for the nanoparticle samples as well as the iron chloride reference sample, the number of images analyzed has been limited to 30,000 for each sample, with the exception of the \enquote{10\,nm in PS} sample only having 25,000 usable shots after filtering. At similar signal photon counts on the octal as observed for the foils on the dual detector, the peak in the spectrum at the energy of the FEL beam is more pronounced, leading to difficulties distinguishing higher numbers of photons. Hence, only one and two photon hits are used in the photon discretization (see \fref{fig:spectrum_nano} for an example).
 
 Using a sample with just the polymer, without any added iron (neither nanoparticles nor atomic), the influence of air scattering on the correlations can be examined, and in the results of the iron chloride sample having similar numbers of signal photons the effect of uncorrected detector artifacts could be seen. Neither result in a strong correlation signal (see \fref{fig:resnano2d}). The strength of the noise as quantified by the standard deviation over pixels outside the center area of the 2d-reconstruction of the samples is (1.4$\pm$0.1)$\cdot$10$^{-4}$.
 
@@ -370,7 +370,7 @@ In the radially averaged $g^2$ of the four different samples neither a feature c
 
 After applying the filtering, masking and corrections, the mean photon count considered as signal per pixel is 0.4-0.6 for both samples (a histogram is shown in \fref{fig:spectrum_gaas}), corresponding to $\approx 3\cdot10^7$ photons in $4\pi$ and $\approx$1\% of the gallium atoms inside the focus emitting fluorescence. Overall, $2\cdot10^4$ images per sample remain and can be used for further analysis.
 
-For the determination of the crystal orientation and detector offsets, the regression parameters are initialized with a 5.65\,\AA\, lattice constant, 9.25\,keV energy, 14\,cm detector distance and the result of a 2D cubic fit to the fluorescence background for the values of the x- and y-shifts. The  lines considered are shown in \fref{fig:kosselgaaslines} and listed in \fref{tab:kosselpeaks}. The results are shown in \fref{tab:kosselfit} as mean over the sets for each sample and maximum deviation from the mean as an error estimation. Overall, the alignment is precise up to at most than 0.6° rotation, except for rotation in the plane parallel to the crystal surface (designated "roll"), and 140\,pixel translation.
+For the determination of the crystal orientation and detector offsets, the regression parameters are initialized with a 5.65\,\AA\, lattice constant, 9.25\,keV energy, 14\,cm detector distance and the result of a 2D cubic fit to the fluorescence background for the values of the x- and y-shifts. The  lines considered are shown in \fref{fig:kosselgaaslines} and listed in \fref{tab:kosselpeaks}. The results are shown in \fref{tab:kosselfit} as mean over the sets for each sample and maximum deviation from the mean as an error estimation. Overall, the alignment is precise up to at most than 0.6° rotation, except for rotation in the plane parallel to the crystal surface (designated \textit{roll}), and 140\,pixel translation.
 
 \begin{figure}
 	\centering
