--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1613,6 +1613,28 @@ with relatively short life spans.},
   primaryclass  = {physics.app-ph},
 }
 
+@Article{teal1951,
+  author    = {Teal, Gordon K and Sparks, Morgan and Buehler, Ernest},
+  journal   = {Physical Review},
+  title     = {Growth of germanium single crystals containing p-n junctions},
+  year      = {1951},
+  number    = {4},
+  pages     = {637},
+  volume    = {81},
+  publisher = {APS},
+}
+
+@Article{jiang2018,
+  author    = {Jiang, Yi and Chen, Zhen and Han, Yimo and Deb, Pratiti and Gao, Hui and Xie, Saien and Purohit, Prafull and Tate, Mark W and Park, Jiwoong and Gruner, Sol M and others},
+  journal   = {Nature},
+  title     = {Electron ptychography of 2D materials to deep sub-{\aa}ngstr{\"o}m resolution},
+  year      = {2018},
+  number    = {7714},
+  pages     = {343--349},
+  volume    = {559},
+  publisher = {Nature Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
