--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -114,13 +114,13 @@ If multiple images are recorded or simulated, the expectation value for each pix
 %This normalization scheme will be used for all reconstructions in this thesis.
 
 %For brevity, a detailed comparison of the different normalization approaches is not shown. Still, the successful reconstructions of the reciprocal space, for both wide and small angle simulations with varying amounts of noise and simulated photon numbers, without any pedestal ($g^2(\infty)\not\approx 1$) or strong artifacts throughout this chapter indicate that the applied normalization is sufficient.  
-
+\clearpage
 \section{Results of the Simulation}
 Using the time independent simulation, different simple photon counting methods are compared, the extent of the reciprocal space accessible from a full 3d reconstruction of a measurement in one orientation is determined and for relevant parameters influencing the SNR theoretical considerations are validated by simulating speckle patterns and performing the reconstruction. Furthermore, the effect of having multiple nanoparticle samples in the focus is investigated. The time resolved simulation is used to further examine the influence of the finite fluorescence coherence time, pulse width and sample thickness as well as the validity of approximating this influence by the overlay of a discrete number of speckle images according to the estimated number of modes.
 
 \subsection{Photon counting}
 As the relevant signal for the correlation analysis is the presence of fluorescence photons, but charge sharing and readout noise of the detector as well as the presence of photons caused by air scattering and straylight degrade this signal, different approaches of preprocessing to reduce this degradation were compared:
-
+\begin{samepage}
 \begin{itemize}[nosep]
 	\item Using the raw signal.
 	\item Using the raw signal after applying a noise threshold.
@@ -128,6 +128,7 @@ As the relevant signal for the correlation analysis is the presence of fluoresce
 	\item Discretization by maximum likelihood.
 	\item Using a droplet algorithm.
 \end{itemize}
+\end{samepage}
 
 Considering possible combinations of signal and scattering photons by finding  $nE_{fluorescence}+mE_{excitation}$ with integer $n$, $m$ closest to the observed value and only using the signal photon number $n$ for the correlation may reduce the influence of scattering as well as charge sharing, but does not account for the different probabilities of signal and scattering photons. If the detector noise level, the point spread function due to charge sharing as well as the distribution of signal and scattering is known or can be estimated, a Bayesian classifier can be trained on synthetic data, which returns for each observed value on the detector the number of signal photons with the highest probability causing this value (\fref{fig:probs}) and the associated decision boundaries. Depending on the apriori probabilities and the detector characteristics, this maximum likelihood solution can differ from the closest combination. The noise thresholding was done with a threshold of three times the standard deviation of the detector noise. For comparison, the PSANA Photon algorithm, a droplet algorithm considering only the signal photons was used \cite{psana}.
 
@@ -162,7 +163,7 @@ Considering possible combinations of signal and scattering photons by finding  $
 		\label{fig:photonrecon}
 	\end{subfigure}	
 	
-	\caption[Comparison of different photon counting methods for intensity correlation calculations]{Comparison of different photon counting methods for intensity correlation calculations: In \textbf{(a)} the center of the 2d results of the correlation for a simulated grating under two conditions are shown (high signal and low signal, parameters as described in the main text). In  \textbf{(b)}, for three different conditions (from left to right: high signal, low signal and high noise) line profiles are shown. Using the raw signal or simple thresholding overestimates the correlation between neighboring pixels, the PSANA droplet algorithm underestimates it compared to the ground truth. The maximum likelihood method and the "closest combination approach" reproduce the ground truth signal sufficiently well. For detailed quantitative results see also \fref{tab:photonrecon}.}
+	\caption[Comparison of different photon counting methods for intensity correlation calculations]{Comparison of different photon counting methods for intensity correlation calculations: In \textbf{(a)} the center of the 2d results of the correlation for a simulated grating under two conditions are shown (high signal and low signal, parameters as described in the main text). In  \textbf{(b)}, for three different conditions (from left to right: high signal, low signal and high noise) line profiles are shown. Using the raw signal or simple thresholding overestimates the correlation between neighboring pixels, the PSANA droplet algorithm underestimates it compared to the ground truth. The maximum likelihood method and the \textit{closest combination} approach reproduce the ground truth signal sufficiently well. For detailed quantitative results see also \fref{tab:photonrecon}.}
 \end{figure}
 \begin{table}
 	\caption[Ratio of $g^2-1$ of different photon counting schemes to ground truth value]{Ratio of $g^2-1$ of different photon counting schemes to ground truth value  for $\Delta$=1\, pixel/first maximum. \textit{Closest} is \textit{Combination} without considering Noise photons, giving good results in the low noise cases.}
@@ -182,7 +183,7 @@ Considering possible combinations of signal and scattering photons by finding  $
 	\end{adjustwidth}
 \end{table}
 
-To evaluate the different approaches, for a grating with pitch 50\,nm, line width 20\,nm and 100\,nm thickness in a 400\,nm (FWHM) focus, resulting in $10^7$ excited atoms emitting at 10\,keV and a 1024x1024 pixel detector with 50\,\micrometer pixel size in 50\,cm distance 2000 fluorescence speckle images were simulated. Three different cases were considered: 1) \textit{High Signal}  with $10^5 $ signal photons/image, 2) \textit{Low Signal} with $10^4$ signal photons/image, both having $10^3$ photons at 13\,keV as scattering noise and 500\,eV Gaussian detector noise;  3)  \textit{High Noise} with 2.5\,times the scattering and 2\,times the detector noise  and $10^4$ signal photons/image. Charge sharing was in all cases simulated with $\sigma$=5\,\micrometer.  For each photon counting approach, normalized intensity correlations were calculated and compared to a reconstruction without noise or charge sharing as ground truth. For the first two cases, the center part of the correlation is shown in \fref{fig:photonreconimg}, line profiles through the center, and the first maximum for all cases are shown in \fref{fig:photonrecon}. In the different reconstructions, two effects are visible: In comparison with the ground truth, without any correction $g^2$ for low $q$ is overestimated due to the correlation of neighboring pixels by charge sharing and underestimated for the first maximum (see \fref{tab:photonrecon} for detailed values). This effect was slightly reduced by thresholding, and greatly reduced by rounding to the closest combination as well as by the maximum likelihood classification. The PSANA droplet algorithm resulted in an incorrect negative correlation between neighboring pixels and reduced correlation at the first maximum.
+To evaluate the different approaches, for a grating with pitch 50\,nm, line width 20\,nm and 100\,nm thickness in a 400\,nm (FWHM) focus, resulting in $10^7$ excited atoms emitting at 10\,keV and a 1024x1024 pixel detector with 50\,\textmu m pixel size in 50\,cm distance 2000 fluorescence speckle images were simulated. Three different cases were considered: 1) \textit{High Signal}  with $10^5 $ signal photons/image, 2) \textit{Low Signal} with $10^4$ signal photons/image, both having $10^3$ photons at 13\,keV as scattering noise and 500\,eV Gaussian detector noise;  3)  \textit{High Noise} with 2.5\,times the scattering and 2\,times the detector noise  and $10^4$ signal photons/image. Charge sharing was in all cases simulated with $\sigma$=5\,\textmu m.  For each photon counting approach, normalized intensity correlations were calculated and compared to a reconstruction without noise or charge sharing as ground truth. For the first two cases, the center part of the correlation is shown in \fref{fig:photonreconimg}, line profiles through the center, and the first maximum for all cases are shown in \fref{fig:photonrecon}. In the different reconstructions, two effects are visible: In comparison with the ground truth, without any correction $g^2$ for low $q$ is overestimated due to the correlation of neighboring pixels by charge sharing and underestimated for the first maximum (see \fref{tab:photonrecon} for detailed values). This effect was slightly reduced by thresholding, and greatly reduced by rounding to the closest combination as well as by the maximum likelihood classification. The PSANA droplet algorithm resulted in an incorrect negative correlation between neighboring pixels and reduced correlation at the first maximum.
 
 \subsection{Accessible Reciprocal Space}
 
@@ -215,7 +216,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 			\label{fig:pairnoise}
 		\end{subfigure}\\
 	\end{tabular}
-	\caption[Accessible reciprocal space]{The accessible reciprocal space with an 2048x2048\,pixel (100\,\micrometer pixelsize) at 12.5\,cm distance and 9.2\,keV is shown in a) and b). In a), the surface of the Ewald sphere accessible in a diffraction experiment is shown in green for comparison. IDI allows a reconstruction of a three dimensional volume. In b), the position of GaAs Bragg peaks as determined by finding local maxima (>4 standard deviations) in the reconstruction is shown inside this volume. As the accessible $q_z$ is depended on $q_x$/$q_y$ and low near the limits of the latter, a precise alignment of the detector with regard to the lattice planes is necessary to be able to image the maximal number of peaks. Using a square, centered, planar detector with uniform pixelsize, the number of correlation pairs for resulting in the same $\vec{q}$ depends on $\vec{q}$ as shown in on the left of c) for a $q_z=0$ slice. The noise (calculated as the standard deviation over 100 independent simulations) is therefore also non-uniform, as shown on the right of c).}
+	\caption[Accessible reciprocal space]{The accessible reciprocal space with an 2048x2048\,pixel (100\,\textmu m pixelsize) at 12.5\,cm distance and 9.2\,keV is shown in a) and b). In a), the surface of the Ewald sphere accessible in a diffraction experiment is shown in green for comparison. IDI allows a reconstruction of a three dimensional volume. In b), the position of GaAs Bragg peaks as determined by finding local maxima (>4 standard deviations) in the reconstruction is shown inside this volume. As the accessible $q_z$ is depended on $q_x$/$q_y$ and low near the limits of the latter, a precise alignment of the detector with regard to the lattice planes is necessary to be able to image the maximal number of peaks. Using a square, centered, planar detector with uniform pixelsize, the number of correlation pairs for resulting in the same $\vec{q}$ depends on $\vec{q}$ as shown in on the left of c) for a $q_z=0$ slice. The noise (calculated as the standard deviation over 100 independent simulations) is therefore also non-uniform, as shown on the right of c).}
 	
 \end{figure}
 
@@ -233,7 +234,7 @@ Separate normalization of each shot according to \fref{eq:normshot}  followed by
 \subsection{Parameters Influencing the Signal and Noise Characteristics}
 \paragraph{Detector Size}
 	
-To assess the influence of the number of pixels of a detector on the SNR, a simulation for a 1\,\micrometer thick Copper foil in an 100\,nm FWHM focus was performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation averaged over in the reconstruction increases linear with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As shown in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
+To assess the influence of the number of pixels of a detector on the SNR, a simulation for a 1\,\textmu m thick Copper foil in an 100\,nm FWHM focus was performed. The detector size was varied from 64x64 to 3072x3072 pixels and always placed at the same distance of 1\,m, keeping the mean photon count per pixel constant. The number of correlation averaged over in the reconstruction increases linear with the number of pixels. For the SNR calculations, the signal is defined as peak intensity, the noise as the standard deviation over independent simulations.  As shown in \fref{fig:SNRdetsize}, under these conditions, the SNR is proportional to the square root of the number of pixels of the detector. 
 Outside to center area of the reconstruction, the number of different pixel pairs resulting in the same $\Delta{q}$ varies. In a small angle setup, the number of pairs resulting from a finite detector decrease linear in the distance from the center of the reconstruction. In a wide angle setup, i.e. for a crystal sample, the varying solid angle covered by each pixel results in a non trivial dependence of the number of pairs and hence of the SNR on $\Delta{q}$ as shown in \fref{fig:pairnoise}.
 
 
@@ -259,7 +260,7 @@ To Illustrate the effect of the number of modes on the signal and the SNR, simul
 	\label{fig:SNRNimages}
 \end{subfigure}
 \caption[SNR dependence on the number of modes and images]{For a simulated crystal
-	(sc-structure, 200x200x500 atoms, 5\,\AA\,lattice constant, 2048x2048 detector with 100\,\micrometer pixelsize at 50\,cm, $10^4$ photons/image on the detector, 10\,keV) dependence of the signal (height of the peak) on the number of simulated modes shows approximately an $1/M$ relation.  The inset shows individual line profiles through a Bragg peak in the reconstruction. In (b), for a simulated Nickel grating (80\,nm pitch, 40\,nm thickness in a 200\,nm focus, 1024x1024 detector, 70\,cm) the dependence of the SNR on the number of images averaged over and modes fits the $\sqrt{N}/M$ relation, which is indicated by dashed lines.}
+	(sc-structure, 200x200x500 atoms, 5\,\AA\,lattice constant, 2048x2048 detector with 100\,\textmu m pixelsize at 50\,cm, $10^4$ photons/image on the detector, 10\,keV) dependence of the signal (height of the peak) on the number of simulated modes shows approximately an $1/M$ relation.  The inset shows individual line profiles through a Bragg peak in the reconstruction. In (b), for a simulated Nickel grating (80\,nm pitch, 40\,nm thickness in a 200\,nm focus, 1024x1024 detector, 70\,cm) the dependence of the SNR on the number of images averaged over and modes fits the $\sqrt{N}/M$ relation, which is indicated by dashed lines.}
 \end{figure}
 
 \paragraph{Undersampling and  Sample Size}
@@ -305,7 +306,7 @@ If instead of considering the peak value of the reconstruction as signal, the th
 A simulation with a varying number of spheres placed randomly inside the focal volume while ensuring a minimum distance between neighboring spheres with no other interaction was performed to decide if measuring the fluorescence of more than one nanoparticle in one shot is advantageous.
 The minimum distance was chosen according to the typical size of nanoparticle capping agents; the number of spheres was increased up to a simulated Poisson sphere distribution (see appendix \fref{algo:bridson} for details) as densest random placement of particles, leading to 25\% of the volume filled by possible emitters.
 Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following the poison sphere distribution, and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multisphere3}). 
-For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm FWHM, the fluorescence on a 1024x1024 pixel (pixel size 100\,\micrometer) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
+For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm FWHM, the fluorescence on a 1024x1024 pixel (pixel size 100\,\textmu m) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
 As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more are photons are emitted, and the Poisson noise is reduced, but the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases, 
 
 In the case of 16 randomly positioned spheres, the mean distance to the nearest neighbor in the simulation is approximatly three times the diameter. Compared to a single sample, the noise as measured by the standard error in the reconstruction is reduced by a factor of 10. At the same time, the  signal strength at the first maximum decreases by a factor of only 3, leading to an overall gain in SNR.  The dense random packing, with a mean nearest simulated neighbor distance of 1.4 times the diameter, reduces the noise further by an additional factor of 5, but  reduces the signal by a factor of 10. Hence, the medium-dense sample shows the best SNR in this simulation.
@@ -331,16 +332,16 @@ In the case of 16 randomly positioned spheres, the mean distance to the nearest 
 	\begin{subfigure}[b]{0.45\textwidth}
 		$ $
 	\end{subfigure}
-\caption[Structure factors and reconstructions for multiple spherical samples]{Structure factors of a sphere with 20\,nm radius, a 200\,nm Gaussian focus and a random distribution of points at least 50\,nm apart (a), the structure factor of different numbers of hard 20\,nm radius spheres with an additional 5\,nm separating layer on each sphere inside the focal volume (b), and the result of an IDI simulation assuming iron fluorescence, a mean of $5\cdot10^4$ excited atoms per sphere, a 1024x1024 pixel (100\,\micrometer pixelsize) detector in a distance of 30\,cm (resulting in approximately 1\% of the emitted photons being captured), and using 5000 images (c). The shaded area is the standard error of the mean over images, the markers show the discrete $q$ steps in the reconstruction.}
+\caption[Structure factors and reconstructions for multiple spherical samples]{Structure factors of a sphere with 20\,nm radius, a 200\,nm Gaussian focus and a random distribution of points at least 50\,nm apart (a), the structure factor of different numbers of hard 20\,nm radius spheres with an additional 5\,nm separating layer on each sphere inside the focal volume (b), and the result of an IDI simulation assuming iron fluorescence, a mean of $5\cdot10^4$ excited atoms per sphere, a 1024x1024 pixel (100\,\textmu m pixelsize) detector in a distance of 30\,cm (resulting in approximately 1\% of the emitted photons being captured), and using 5000 images (c). The shaded area is the standard error of the mean over images, the markers show the discrete $q$ steps in the reconstruction.}
 
 \end{figure}
 
 
 \paragraph{Influence of the Pulse Length}
-For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,\micrometer detector in 20\,cm distance, the speckle contrast (calculated as the standard deviation of the speckle pattern over the mean) of a series of time dependent simulations with different decay times $\tau$ of the emission and different FWHM of an exciting Gaussian pulse are shown in \fref{fig:pulsedecay}.  These follow the $1/\sqrt{\erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes in \fref{sec:specklecontrast}.  For each simulation, a reconstruction was performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere}.  The visibility of the reconstructions (\fref{fig:tdpshere_visrecons}) shows for long pulses a reciprocal relationship.
+For a sphere with 10\,nm radius consisting of $2*10^5$ atoms emitting 6.4\,keV fluorescence captured by an 256x256@50\,\textmu m detector in 20\,cm distance, the speckle contrast (calculated as the standard deviation of the speckle pattern over the mean) of a series of time dependent simulations with different decay times $\tau$ of the emission and different FWHM of an exciting Gaussian pulse are shown in \fref{fig:pulsedecay}.  These follow the $1/\sqrt{\erfcx(2\sigma/\tau})$ relation as predicted by the estimation of the number of modes in \fref{sec:specklecontrast}.  For each simulation, a reconstruction was performed, resulting in radial profiles as shown for one $\tau$ in \fref{fig:tdpshere}.  The visibility of the reconstructions (\fref{fig:tdpshere_visrecons}) shows for long pulses a reciprocal relationship.
 
 \paragraph{Influence of the Sample Thickness}
-To investigate the influence of the sample thickness, the speckle constrast in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters were placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness.  The axis of varying thickness was always set perpendicular to the detector such that the viewing angle $\alpha$ does not change the overall volume in which the emitters were placed, ensuring a constant speckle size. Therefore, the change in SNR is only influenced by the finite coherence time $\tau$=1\,fs, the 1\,fs FWHM Gaussian from which the emission times were sampled and the path-length differences, not by a change of the sampling conditions. The 64x64 pixel (pixelsize 100\,\micrometer) detector was simulated to be placed in 1\,m distance. The simulation was performed with 2x oversampling and rebinning in both directions.  
+To investigate the influence of the sample thickness, the speckle constrast in a simulation is shown in \fref{fig:thickness}. In this simulation, a constant number ($10^6$) of 8\,keV emitters were placed inside a 200\,nm x 200\,nm (FWHM) Gaussian volume with varying thickness.  The axis of varying thickness was always set perpendicular to the detector such that the viewing angle $\alpha$ does not change the overall volume in which the emitters were placed, ensuring a constant speckle size. Therefore, the change in SNR is only influenced by the finite coherence time $\tau$=1\,fs, the 1\,fs FWHM Gaussian from which the emission times were sampled and the path-length differences, not by a change of the sampling conditions. The 64x64 pixel (pixelsize 100\,\textmu m) detector was simulated to be placed in 1\,m distance. The simulation was performed with 2x oversampling and rebinning in both directions.  
 The results show, that in high angles, the limited coherence length of the fluorescence reduces the speckle SNR for thick samples in the simulation, whereas in small angles, the sample thickness does not influence the SNR. In the 0° limit, the position of an emitter along this the beam axis does not change the arrival time of its contribution to the speckle pattern at the detector, as the path length difference $\Delta$ caused by the sample thickness $t$ is (with the transversal distance between the sample and detector $z$ and the lateral distance $x$):
 \begin{equation}
 	\Delta=z+\sqrt{z^2+x^2}-\sqrt{(z+t)^2+x^2} \approx(1-\cos (\alpha)) t=\frac{k^2}{\left|\vec{q}\right|^2}t \,.
@@ -380,7 +381,7 @@ The results show, that in high angles, the limited coherence length of the fluor
 \end{figure}
 
 \subsection{Simulation of a Focus Measurement}
-A simulation was performed under similar conditions as will be used later on for the measurement of the focal width at SACLA:  A 5\,\micrometer thick copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), but (due to computational constraints) only emitting at a single energy line and polarisation, measured with a detector with 50\,\micrometer pixel size (charge sharing $\sigma$=5\,\micrometer) placed in a distance of 1\,m perpendicular to the beam. The result of the reconstruction is shown in \fref{fig:simfoil}. 
+A simulation was performed under similar conditions as will be used later on for the measurement of the focal width at SACLA:  A 5\,\textmu m thick copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), but (due to computational constraints) only emitting at a single energy line and polarisation, measured with a detector with 50\,\textmu m pixel size (charge sharing $\sigma$=5\,\textmu m) placed in a distance of 1\,m perpendicular to the beam. The result of the reconstruction is shown in \fref{fig:simfoil}. 
 
 In this simulation, approximately 50 images suffice to achieve an SNR (with the signal measured at 2 pixels of center in the vertical direction and the noise quantified by the standard deviation over the pixels outside the region potentially showing a signal) of $\approx$3.
 
